# pao-inference-mlp

./: CMakeLists.txt  README.md  avx_main.cpp  main.cpp  naive_main.cpp  opencl_main.cpp  openmp_main.cpp
